@@ -27,6 +27,8 @@
 	1. /** @api_usage @api_url etc
 	2. load roles on startup as well (no need to put it separately in data files)
 
+- Socket.IO integration
+
 Done:
 - create API calls from JSON schema
 - send email via API call
