@@ -19,12 +19,12 @@
 		"connect-multiparty": "2.0.0",
 		"cookie-parser": "1.4.3",
 		"csv-parse": "1.1.7",
-		"express": "4.15.3",
+		"express": "4.15.4",
 		"jsonschema": "1.1.1",
 		"ldapjs": "1.0.1",
 		"libxmljs": "^0.18.7",
 		"nodemailer": "4.0.1",
-		"pg": "7.2.0",
+		"pg": "7.3.0",
 		"pg-connection-string": "0.1.3",
 		"syntax-error": "1.1.6",
 		"underscore": "1.8.3",
