@@ -199,6 +199,7 @@ New features:
 - grape-db-setup can now read JSON file as config
 - New view grape.v_pg_table_stats
 - Roles and access paths from schema API calls is now automatically registered in the database upon startup
+- New config option delayed_response will delay responses
 
 Minor changes:
 - grape-db-setup better error messages
